Testing new brackground image

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -57,7 +57,8 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-image: url("http://media.idownloadblog.com/wp-content/uploads/2016/02/Alex-Muench-Minimalist-Wallpaper-Desktop-1920x1080.png"); }
+/*linear-gradient(120deg, #155799, #159957) */
 
 @media screen and (min-width: 64em) {
   .page-header {
