Changed background color

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -56,8 +56,7 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;
-  background-image: url("http://media.idownloadblog.com/wp-content/uploads/2016/02/Alex-Muench-Minimalist-Wallpaper-Desktop-1920x1080.png"); }
+  background-color: #59ABE3;
 /*linear-gradient(120deg, #155799, #159957) */
 
 @media screen and (min-width: 64em) {
